# CryptoSigVerifierV2

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: __init__.py  cli.py
src/core/: __init__.py  eth_utils.py  signer.py  verifier.py
src/performance/: benchmark.py
tests/integration/: __init__.py  test_eth.py
tests/unit/: test_signer.py  test_verifier.py
