[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptosigverifier"
version = "0.1.0"
description = "Professional cryptographic signature toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ecdsa",
    "eth-keys",
    "eth-utils",
    "matplotlib",
    "numpy",
    "tqdm"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/komit2000/CryptoSigVerifierV2"
"Bug Tracker" = "https://github.com/komit2000/CryptoSigVerifierV2/issues"
