[metadata]
name = cryptosigverifier
version = 0.1.0
description = Professional cryptographic signature toolkit

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ecdsa
    eth-keys
    eth-utils
    matplotlib
    numpy
    tqdm

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0
